changed sideBar backgorund color, commit frm abdul

--- a/src/components/SidebarComponent/SidebarComponent.scss
+++ b/src/components/SidebarComponent/SidebarComponent.scss
@@ -6,7 +6,7 @@
 }
 
 .listItems {
-  background: blue;
+  background: #61dafb;
   height: 600px;
   list-style-type: none;
   box-shadow: 0 4px 2px yellow;
@@ -67,8 +67,7 @@
 .navList {
   height: 80px;
   margin: 0 auto;
-  box-shadow: 0 4px 2px yellow;
-  background: rgba(13, 16, 214, 0.9);
+  background: #61dafb;
 }
 
 .navListItem {
