Committing after changing sidebar

--- a/src/components/SidebarComponent/SidebarComponent.scss
+++ b/src/components/SidebarComponent/SidebarComponent.scss
@@ -6,10 +6,9 @@
 }
 
 .listItems {
-  background: #61dafb;
+  background: blue;
   height: 600px;
   list-style-type: none;
-  box-shadow: 0 4px 2px yellow;
 }
 
 .li {
