added icons in delete screen

--- a/src/components/HeaderComponent/HeaderComponent.scss
+++ b/src/components/HeaderComponent/HeaderComponent.scss
@@ -10,8 +10,8 @@
   display: grid;
   grid-template-columns: 15% 30% auto 20% 8%;
   grid-area: 1/1/1/5;
-  background: blue;
-  box-shadow: 0 4px yellow;
+  background: #18a0fb;
+  // box-shadow: 0 4px yellow;
 }
 
 .rightlist {
