--- a/src/components/SidebarComponent/SidebarComponent.scss
+++ b/src/components/SidebarComponent/SidebarComponent.scss
@@ -6,7 +6,7 @@
 }
 
 .listItems {
-  background: blue;
+  background: #18a0fb;
   height: 600px;
   list-style-type: none;
 }
@@ -49,6 +49,7 @@
   top: 6px;
   position: relative;
   color: white;
+  font-size: 400px;
 }
 
 .Sidebar-logo {
@@ -81,4 +82,13 @@
   text-decoration: none;
   cursor: pointer;
   color: white;
+}
+
+.SendRoundedIcon:hover {
+  fill: green;
+}
+
+.SendRoundedIcon {
+  width: 400px;
+  height: 200px;
 }
