--- a/src/components/HeaderComponent/HeaderComponent.scss
+++ b/src/components/HeaderComponent/HeaderComponent.scss
@@ -11,7 +11,6 @@
   grid-template-columns: 15% 30% auto 20% 8%;
   grid-area: 1/1/1/5;
   background: #18a0fb;
-  // box-shadow: 0 4px yellow;
 }
 
 .rightlist {
@@ -57,7 +56,7 @@
 }
 
 input[type="search"] {
-  color: blue;
+  color: #18a0fb;
   width: 100%;
   height: 32px;
   background: skyblue;
@@ -76,7 +75,7 @@ input[type="search"] {
   top: 10px;
   right: 32px;
   position: relative;
-  color: blue;
+  color: #18a0fb;
   grid-area: 1/1/1/1;
   cursor: pointer;
 }
