--- a/src/components/SidebarComponent/SidebarComponent.scss
+++ b/src/components/SidebarComponent/SidebarComponent.scss
@@ -1,20 +1,23 @@
 .main {
   display: grid;
   grid-template-columns: 12% 50% auto;
-  grid-gap: 12px;
-  margin-bottom: 24px;
 }
 
 .listItems {
   background: #18a0fb;
-  height: 600px;
+  height: 540px;
   list-style-type: none;
+  margin-top: 4px;
+  margin-bottom: 0;
 }
 
 .li {
   list-style-type: none;
   padding: 20px 12px;
   text-shadow: 0 2px 2px black;
+  :active {
+    box-shadow: 0 4px white;
+  }
 }
 
 .listItem {
@@ -27,61 +30,15 @@
 .Component {
   grid-area: 2/2/2/3;
   margin-top: 16px;
+  margin-left: 16px;
 }
 
-.SidebarItems {
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  font-size: 24px;
-}
-
-.li:active {
-  box-shadow: 0 4px white;
-}
-
-.InboxRoundedIcon,
-.MenuRoundedIcon,
-.SendRoundedIcon,
-.DraftsIcon,
-.DeleteOutlineIcon {
+.Sidebar-Icons {
   right: 32px;
   top: 6px;
   position: relative;
   color: white;
   font-size: 400px;
-}
-
-.Sidebar-logo {
-  color: red;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-}
-
-.fa-react {
-  margin-left: 12px;
-  font-size: 16px;
-}
-
-.navList {
-  height: 80px;
-  margin: 0 auto;
-  background: #61dafb;
-}
-
-.navListItem {
-  list-style-type: none;
-  display: inline-block;
-  margin: 12px auto;
-  padding: 12px;
-  text-shadow: 0 2px 2px black;
-}
-
-.anchor {
-  text-decoration: none;
-  cursor: pointer;
-  color: white;
 }
 
 .SendRoundedIcon:hover {
