Latest SCSS Changes

--- a/src/components/MainComponent/DeletedComponent/DeletedComponent.scss
+++ b/src/components/MainComponent/DeletedComponent/DeletedComponent.scss
@@ -1,3 +1,7 @@
+@import "../../../Styles/Sizes";
+@import "../../../Styles/Literals";
+@import "../../../Styles/grid";
+
 .reactsvg {
   height: 100px;
   width: 100px;
