--- a/src/components/LoginComponent/LoginComponent.scss
+++ b/src/components/LoginComponent/LoginComponent.scss
@@ -1,55 +1,76 @@
+@import "../../Styles/colors.scss";
+@import "../../Styles/Sizes";
+@import "../../Styles/Literals";
+@import "../../Styles/grid";
+
+$width: 100%;
+$height: 380px;
+
+@mixin h1 {
+  font-family: Key(font-family);
+  text-align: Key(text-align);
+}
+
 h1 {
-  font-family: sans-serif;
-  text-align: center;
+  @include h1;
 }
 
-.container {
-  width: 20%;
-  min-height: 380px;
-  border: 2px solid white;
-  margin: 24px auto;
-  background: #ffffff;
-  box-shadow: 0 0 4px 6px #bbbaac;
-  border-radius: 12px;
-  display: block;
+.login-container {
+  width: $width - 80%;
+  min-height: $height;
+  border: size(extrasmall) solid color(white);
+  margin: size(verylarge) auto;
+  background: color(white);
+  box-shadow: size(verysmall) size(verysmall) size(small) 6px
+    color(box-shadow-color);
+  border-radius: size(extramedium);
+  @include grid-display(block);
 }
 
-#PasswordValue,
-#NameValue {
-  width: 180px;
-  outline: none;
-  border-radius: 0;
-  background: #ced1dd;
-  border: none;
-  //box-shadow: inset 0 0 0 8px white;
-  padding: 16px;
-  margin: 12px auto;
-  display: block;
+.login-name,
+.login-password {
+  width: $width - 35%;
+  outline: Key(outline);
+  border: Key(border);
+  border-radius: size(verysmall);
+  background: color(fields-color);
+  //box-shadow: inset size(verysmall) size(verysmall) size(verysmall) size(medium) white;
+  padding: size(large);
+  margin: size(extramedium) auto;
+  @include grid-display(block);
 }
 
-#Login,
-#SignUp {
-  width: 210px;
-  padding: 16px;
-  outline: none;
-  border: none;
-  border-radius: 0;
-  margin: 12px auto;
-  color: white;
-  display: block;
-  box-shadow: none;
-  background-color: blue;
+@mixin login-button {
+  width: $width - 23%;
+  padding: size(large);
+  outline: Key(outline);
+  border: Key(border);
+  border-radius: size(verysmall);
+  margin: size(extramedium) auto;
+  color: color(white);
+  @include grid-display(block);
+  background-color: color(blue);
 }
 
-#Login:active,
-#SignUp:active {
-  padding: 24px;
-  box-shadow: inset 0 0 0 8px blue, inset 0 0 8px 8px white;
+.login-button {
+  @include login-button;
+
+  &:active {
+    padding: size(verylarge);
+    box-shadow: inset size(verysmall) size(verysmall) size(verysmall)
+        size(medium) color(blue),
+      inset size(verysmall) size(verysmall) size(medium) size(medium)
+        color(white);
+  }
 }
 
-.span {
-  text-align: center;
-  color: blue;
-  margin: 0 auto;
-  display: block;
+@mixin login-span {
+  text-align: Key(text-align);
+  color: color(blue);
+  margin: size(verysmall) auto;
+  @include grid-display(block);
+}
+
+.login-span {
+  @include login-span;
 }
