--- a/src/components/SignupComponent/SignupComponent.scss
+++ b/src/components/SignupComponent/SignupComponent.scss
@@ -1,49 +1,41 @@
+@import "../../Styles/Sizes";
+@import "../../Styles/Literals";
+@import "../../Styles/grid";
+@import "../LoginComponent/LoginComponent.scss";
+
 h1 {
-  font-family: sans-serif;
-  text-align: center;
+  @include h1;
 }
 
 #name,
 #password,
 #email,
 #confirmPassword {
-  width: 180px;
-  outline: none;
-  border-radius: 0;
+  width: 65%;
+  outline: Key(outline);
+  border: Key(border);
+  border-radius: size(verysmall);
   background: #ced1dd;
-  border: none;
-  //box-shadow: inset 0 0 0 8px white;
-  padding: 16px;
-  margin: 12px auto;
-  display: block;
+  //box-shadow: inset size(verysmall) size(verysmall) size(verysmall) size(medium) white;
+  padding: size(large);
+  margin: size(extramedium) auto;
+  @include grid-display(block);
 }
 
 #Login,
 #SignUp {
-  width: 210px;
-  padding: 16px;
-  outline: none;
-  border: none;
-  border-radius: 0;
-  margin: 12px auto;
-  color: white;
-  display: block;
-  box-shadow: none;
-  background-color: blue;
+  @include login-button;
 }
 
 .Span {
-  text-align: center;
-  color: blue;
-  margin: 0 auto;
-  display: block;
+  @include login-span;
 }
 
 .ancestor {
   text-decoration: none;
   color: blue;
-  text-align: center;
-  cursor: pointer;
-  margin: 0 auto;
-  display: block;
+  text-align: Key(text-align);
+  cursor: Key(cursor);
+  margin: size(verysmall) auto;
+  @include grid-display(block);
 }
