--- a/src/Styles/_colors.scss
+++ b/src/Styles/_colors.scss
@@ -4,6 +4,7 @@ $colors: (
   pink: #fa6acc,
   glamour: #f02a52,
   sky: #18a0fb,
+  skyblue: skyblue,
   violet: #8a2be2,
   blue: blue,
   grey: grey,
