--- a/src/components/SidebarComponent/_Sidebar-Icons.scss
+++ b/src/components/SidebarComponent/_Sidebar-Icons.scss
@@ -3,7 +3,7 @@
 
 $font-size: 400px;
 
-.Sidebar-Icons {
+.sidebar-icons {
   right: size(verylarge) + size(medium);
   top: size(small) + size(extrasmall);
   position: Key(position);
