--- a/src/components/MainComponent/ComposeComponent/ComposeComponent.scss
+++ b/src/components/MainComponent/ComposeComponent/ComposeComponent.scss
@@ -2,7 +2,7 @@
 @import "../../../Styles/Literals";
 @import "../../../Styles/grid";
 
-.ComposeComponent {
+.compose-component {
   width: 100%;
   border: size(extrasmall) solid white;
   background: #ffffff;
@@ -10,28 +10,26 @@
   border-radius: size(extramedium);
 }
 
-.Form {
+.compose-form {
   margin: size(verylarge) auto;
   @include grid-display(block);
 }
 
-.Label {
+.compose-label {
   width: 100%;
   @include grid-display(grid);
   grid-template-columns: 15% 60% auto;
   grid-template-rows: auto;
 }
 
-.LabelText {
+.compose-label-text {
   grid-area: 1/1/2/2;
   //left: 32px;
   top: 10px;
   position: Key(position);
 }
 
-#Recipient,
-#CC,
-#Subject {
+.compose-input-fields {
   width: 100%;
   outline: none;
   border-radius: size(verysmall);
@@ -42,13 +40,13 @@
   @include grid-display(grid);
 }
 
-textarea {
+.compose-textarea {
   margin: size(extramedium) auto;
   @include grid-display(block);
   width: 90%;
 }
 
-.Send {
+.compose-button {
   width: 100%;
   padding: size(large);
   grid-area: 1/2/1/2;
@@ -59,14 +57,14 @@ textarea {
   background-color: #1863b9;
 }
 
-.align {
+.compose-leftlist {
   @include grid-display(grid);
-  grid-template-columns: 15% 15% 15%;
+  @include grid-templates(15% 15% 15%, auto);
 }
 
-.Icons {
-  grid-area: 1/3/1/3;
-  color: grey;
+.compose-icons {
+  @include grid-area(1, 3, 1, 3);
+  color: color(grey);
   top: size(small);
   position: Key(position);
 }
