--- a/src/components/MainComponent/InboxComponent/InboxComponent.scss
+++ b/src/components/MainComponent/InboxComponent/InboxComponent.scss
@@ -1,95 +1,86 @@
 @import "../../../Styles/Sizes";
 @import "../../../Styles/Literals";
 @import "../../../Styles/grid";
+@import "../../../Styles/colors";
 
-.maindiv {
+.inbox-main {
   width: 100%;
-  border: size(extrasmall) solid white;
-  background: #ffffff;
-  box-shadow: size(verysmall) size(verysmall) size(small) size(small) skyblue;
+  border: size(extrasmall) solid color(white);
+  background: color(white);
+  box-shadow: size(verysmall) size(verysmall) size(small) size(small)
+    color(skyblue);
   border-radius: size(extramedium);
 }
 
-.rows {
+.inbox-rows {
   width: 100%;
 }
 
-.grid-container {
+.inbox-grid-container {
   @include grid-display(grid);
-  grid-template-columns: 5% 70% auto auto auto auto;
+  @include grid-templates(10% 60% auto auto auto auto, auto);
   grid-gap: size(verysmall);
   padding: size(extrasmall);
-  box-shadow: size(verysmall) size(extrasmall) grey;
+  box-shadow: size(verysmall) size(extrasmall) color(grey);
 }
 
-.check {
-  grid-area: 1/1/3/1;
+.inbox-check {
+  @include grid-area(1, 1, 3, 1);
 }
 
-.senderName {
-  grid-area: 1/2/1/2;
-  top: size(extralarge);
+.inbox-sendername {
+  @include grid-area(1, 2, 1, 2);
+  left: size(extralarge);
   position: Key(position);
 }
 
-.subject {
-  grid-row-start: 2;
-  grid-row-end: 2;
-  grid-column-start: 2;
-  grid-column-end: 2;
+.inbox-subject {
+  @include grid-area(2, 2, 2, 2);
+  left: size(extralarge);
+  position: Key(position);
 }
 
-.deleted {
-  grid-area: 2/3/2/3;
-  cursor: pointer;
+.inbox-deleted {
+  @include grid-area(2, 3, 2, 3);
+  cursor: size(cursor);
 }
 
-.attachments {
-  grid-row-start: 2;
-  grid-row-end: 2;
-  grid-column-start: 3;
-  grid-column-end: 3;
+.inbox-attachments {
+  @include grid-area(2, 3, 2, 3);
 }
 
-.flag {
-  grid-row-start: 2;
-  grid-row-end: 2;
-  grid-column-start: 4;
-  grid-column-end: 4;
+.inbox-flag {
+  @include grid-area(2, 4, 2, 4);
 }
 
-.time {
-  grid-row-start: 2;
-  grid-row-end: 2;
-  grid-column-start: 5;
-  grid-column-end: 5;
-  color: gray;
+.inbox-time {
+  @include grid-area(2, 5, 2, 5);
+  color: color(gray);
   font-size: 14px;
 }
 
-.date {
-  grid-row-start: 2;
-  grid-row-end: 2;
-  grid-column-start: 6;
-  grid-column-end: 6;
-  color: gray;
+.inbox-date {
+  @include grid-area(2, 6, 2, 6);
+  color: color(gray);
   font-size: 14px;
 }
 
-.header {
-  background-color: #e5e5e5;
-  width: 33.33%;
-  display: inline-block;
+.inbox-header {
+  @include grid-display(grid);
+  @include grid-templates(33.33% 33.33% 33.33%, auto);
 }
 
-.orderBy {
-  width: 33.33%;
+.inbox-checkbox {
   background-color: #e5e4e2;
-  display: inline-block;
+  @include grid-area(1, 1, 1, 1);
 }
 
-.pagination {
-  width: 33.33%;
+.inbox-order {
   background-color: #e5e4e2;
-  display: inline-block;
+  @include grid-area(1, 2, 1, 2);
+}
+
+.inbox-pagination {
+  background-color: #e5e4e2;
+  @include grid-area(1, 3, 1, 3);
 }
