--- a/src/components/SignupComponent/SignupComponent.scss
+++ b/src/components/SignupComponent/SignupComponent.scss
@@ -7,10 +7,18 @@ h1 {
   @include h1;
 }
 
-#name,
-#password,
-#email,
-#confirmPassword {
+.signup-container {
+  width: $width - 80%;
+  min-height: $height;
+  border: size(extrasmall) solid color(white);
+  margin: size(verylarge) auto;
+  background: color(white);
+  box-shadow: size(verysmall) size(verysmall) size(small) 6px
+    color(box-shadow-color);
+  border-radius: size(extramedium);
+  @include grid-display(block);
+}
+.signup-input-fields {
   width: 65%;
   outline: Key(outline);
   border: Key(border);
@@ -22,16 +30,23 @@ h1 {
   @include grid-display(block);
 }
 
-#Login,
-#SignUp {
+.signup-button {
   @include login-button;
+
+  &:active {
+    padding: size(verylarge);
+    box-shadow: inset size(verysmall) size(verysmall) size(verysmall)
+        size(medium) color(blue),
+      inset size(verysmall) size(verysmall) size(medium) size(medium)
+        color(white);
+  }
 }
 
-.Span {
+.signup-span {
   @include login-span;
 }
 
-.ancestor {
+.signup-ancestor {
   text-decoration: none;
   color: blue;
   text-align: Key(text-align);
